--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@vitejs/plugin-vue": "^1.9.2",
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3",
     "vite": "^2.6.0",
