--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "frontend",
+  "name": "ants_app",
   "version": "0.0.0",
+  "description": "ants_app",
+  "author": "Antenh Kibret <antenh.kibret@gmail.com> (www.antenh.com)",
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -21,5 +24,6 @@
     "typescript": "^4.4.3",
     "vite": "^2.6.0",
     "vue-tsc": "^0.3.0"
-  }
+  },
+  "private": true
 }
