--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "axios": "^0.24.0",
     "vue": "^3.2.16",
+    "vue-axios": "^3.4.0",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
