--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@hcaptcha/vue3-hcaptcha": "^1.0.1",
     "axios": "^0.24.0",
     "vue": "^3.2.16",
     "vue-axios": "^3.4.0",
